--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "quasar": "^1.0.0"
+    "copy-to-clipboard": "^3.2.0",
+    "quasar": "^1.0.0",
+    "swiper": "^4.5.0",
+    "vue-json-views": "^0.3.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
